@@ -1,5 +1,7 @@
 package com.example.backend.services;
 
+import com.example.backend.dto.CoursResponse;
+import com.example.backend.dto.QuestionResponse;
 import com.example.backend.dto.QuizRequest;
 import com.example.backend.dto.QuizResponse;
 import com.example.backend.exceptions.NotFoundException;
@@ -7,52 +9,68 @@ import com.example.backend.models.Question;
 import com.example.backend.models.Quiz;
 import com.example.backend.repositories.QuestionRepository;
 import com.example.backend.repositories.QuizRepository;
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
-@AllArgsConstructor
 @Service
+@RequiredArgsConstructor
 public class QuizServiceImpl implements QuizService {
 
-    private final QuizRepository quizRepo;
+    @Autowired
+    private QuizRepository quizRepo;
 
+    @Autowired
     private QuestionRepository questionRepo;
 
-    private ModelMapper mapper;
+    private final ModelMapper mapper;
+
 
     @Override
     public List<QuizResponse> index() {
-        Pageable pageable = Pageable.ofSize(15);
-        return quizRepo.findAll(pageable).stream().map(el ->
-                mapper.map(el, QuizResponse.class)).toList();
+        Pageable pageable = PageRequest.of(0, 15);
+        Page<Quiz> quizPage = quizRepo.findAll(pageable);
+        return quizPage.stream()
+                .map(this::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public QuizResponse create(QuizRequest quiz){
         Quiz req = mapper.map(quiz, Quiz.class);
         System.out.println(req);
-        List<Question> questions = new ArrayList<>(req.getQuestions());
+
+        List<Question> questions = new ArrayList<>();
+        for (QuestionResponse questionResp : quiz.getQuestions()) {
+            Question question = questionRepo.findById(questionResp.getId())
+                    .orElseThrow(() -> new NotFoundException("La question ", "d'id", questionResp.getId()));
+            questions.add(question);
+        }
         req.setQuestions(questions);
+
         return mapper.map(quizRepo.save(req), QuizResponse.class);
     }
 
     @Override
     public QuizResponse show(Long id){
         Quiz quiz = quizRepo.findById(id).orElseThrow(() ->
-                new NotFoundException("Le Quiz ", "d'id: ", id));
-        return mapper.map(quiz, QuizResponse.class);
+                new NotFoundException("Le Quiz ", "d'id", id));
+//        System.out.println(quiz);
+        return toDto(quiz);
     }
 
     @Override
     public QuizResponse update(Long id, QuizRequest updatedQuiz){
         Quiz old = quizRepo.findById(id).orElseThrow(() ->
-                new NotFoundException("Le Quiz que vous voulez modifier ", "d'id: ", id));
+                new NotFoundException("Le Quiz que vous voulez modifier ", "d'id", id));
         Quiz quiz = mapper.map(updatedQuiz, Quiz.class);
         quiz.setId(id);
         return mapper.map(quiz, QuizResponse.class);
@@ -61,7 +79,7 @@ public class QuizServiceImpl implements QuizService {
     @Override
     public void delete(Long id){
         Quiz quiz = quizRepo.findById(id).orElseThrow(() ->
-                new NotFoundException("Le Quiz que vous voulez supprimer ", "d'id: ", id));
+                new NotFoundException("Le Quiz que vous voulez supprimer ", "d'id", id));
         quizRepo.delete(quiz);
     }
 
@@ -76,6 +94,13 @@ public class QuizServiceImpl implements QuizService {
 //
 //        questionList.forEach(q->System.out.println(q.getLibelle()));
 //        return questionList;
-//    }
-
+//    }`
+    public QuizResponse toDto(Quiz quiz) {
+        QuizResponse resp = new QuizResponse();
+        resp = mapper.map(quiz, QuizResponse.class);
+        resp.setCours(mapper.map(quiz.getCours(), CoursResponse.class));
+        resp.setQuestions(quiz.getQuestions().stream().map(el ->
+                mapper.map(el, QuestionResponse.class)).toList());
+        return resp;
+    }
 }
